--- a/css/NewReleases.css
+++ b/css/NewReleases.css
@@ -155,4 +155,26 @@
     margin-left: 280px;
     width: calc(100% - 280px);
 }
+
+.content_list ul{
+    overflow : hidden;
+}
+.content_list ul li{
+    float : left;
+    width: calc(33.3333% - 20px);
+    margin : 10px;
+}
+.content_list ul li a{}
+.content_list ul li a img{
+    width: 100%;
+}
+
+.content_list ul li:nth-child(2) img{
+    /* width: 80%; */
+}
+
+.content_list ul li .list_text{}
+.content_list ul li .list_text span{}
+.content_list ul li .list_text p{}
+
 /* .content_list area end */
