--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,21 @@
 @charset "utf-8";
 
 
-/* swiper css */
+/* swiper style */
 .swiper-container {
     width: 100%;
 }
+.swiper-pagination-bullet{
+    width: 12px;
+    height: 12px;
+    border-radius: 0%;
+    background: black;
+    opacity: 0.7;
+  }
+  .swiper-pagination-bullet-active{
+    background: white;
+    opacity: 1;
+  }
 
 /* section area start */
 section{
